@@ -14,7 +14,7 @@ class Solution {
             while (j < k) {
                 int sum = nums[i] + nums[j] + nums[k];
                 if (sum == 0) {
-                    res.add(Arrays.asList(nums[i], nums[j], nums[k]));
+                    res.add(List.of(nums[i], nums[j], nums[k]));
                     // skip duplicate
                     while (j < k && nums[j] == nums[j+1]) j++;
                     while (j < k && nums[k] == nums[k-1]) k--;
